examples/test/testpolicy16362.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16362
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key49: value7
      key8: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value26
          key37: value19
          key23: value29
      podSelector:
        matchLabels:
          key25: value27
          key24: value15
          key45: value19
